--- a/Public/assets/css/style.css
+++ b/Public/assets/css/style.css
@@ -1,6 +1,3 @@
-body {
-  /*padding: 50px;*/
-}
 .tab {
   display: none;
 }
@@ -8,21 +5,6 @@ body {
 .divMain {
 	display: none;
 }
-
-/*.navbar:before{
-	position: absolute;
-    z-index: -1;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    content: "";
-    transition: opacity .15s linear;
-    opacity: 0;
-    border-bottom: 1px solid rgba(0,0,0,.1);
-    background-color: #fff;
-}*/
-
 
 .section {
 	position: relative;
@@ -49,8 +31,6 @@ body {
 }
 
 .img {
-	/*width: 230px;
-	height: 200px;*/
 	padding: 10px;
 	display: none;
 }
@@ -59,16 +39,6 @@ body {
 	min-width: 230px;
 	min-height: 200px;
 }
-
-
-/*
-#footer {
-  height: 60px;
-  background-color: #f5f5f5;
-  margin-top:50px;
-  padding-top:20px;
-  padding-bottom:20px;
-}*/
 
 #myFooter {
     background-color: #3a3f46;
@@ -101,7 +71,7 @@ body {
     margin-top: 10px;
 }
 
-#myFooter .second-bar .logo a{
+#myFooter .secondBar .logo a{
     color:white;
     font-size: 28px;
     float: left;
@@ -122,12 +92,12 @@ body {
     color: white;
 }
 
-#myFooter .second-bar {
+.secondBar {
     background-color: #33373e;
     text-align: center;
 }
 
-#myFooter .second-bar a {
+.secondBar a {
     font-size: 22px;
     color: #9fa3a9;
     padding: 10px;
@@ -135,7 +105,7 @@ body {
     line-height: 68px;
 }
 
-#myFooter .second-bar a:hover {
+.secondBar a:hover {
     text-decoration: none;
 }
 
@@ -166,6 +136,11 @@ body {
     }
 }
 
+
+
+/* CSS used for positioning the footers at the bottom of the page. */
+/* You can remove this. */
+
 html{
     height: 100%;
 }
@@ -176,4 +151,15 @@ body{
     flex-direction: column;
     -webkit-flex-direction: column;
     height: 100%;
+}
+
+.content{
+   flex: 1 0 auto;
+   -webkit-flex: 1 0 auto;
+   min-height: 200px;
+}
+
+#myFooter{
+   flex: 0 0 auto;
+   -webkit-flex: 0 0 auto;
 }
