Correções visuais e de bugs

--- a/Public/assets/css/style.css
+++ b/Public/assets/css/style.css
@@ -1,3 +1,7 @@
+.textoCentral{
+    background-color: #00000057!important;
+}
+
 .tab {
   display: none;
 }
@@ -144,11 +148,6 @@
         text-align: center;
     }
 }
-
-
-
-/* CSS used for positioning the footers at the bottom of the page. */
-/* You can remove this. */
 
 html{
     height: 100%;
